<resources>
    <string name="app_name">Joba App</string>
    <string name="success">Successfully Created Account</string>
    <string name="xercov_delivery">Joba App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">UPDATE</string>
    <string name="quantity">Quantity</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_your_full_address">Enter Your Full Address</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="signup">SIGNUP</string>
    <string name="signup_as_vendor">SignUp As Admin</string>
    <string name="name_account_type">Name(Account Type)</string>
    <string name="vendor_name">Admin Name</string>
    <string name="vendor_email">Admin Email</string>
    <string name="fee">fee</string>
    <string name="closed">CLOSED</string>
    <string name="add">ADD</string>
    <string name="hello_vendor">Hello JobCreator</string>
    <string name="hello_client">Hello JobSeeker</string>
    <string name="find_vendor">Find Vendor</string>
    <string name="find_order">Find Order</string>
    <string name="itemprice">ItemPrice</string>
    <string name="itemname">ItemName</string>
    <string name="discount_description">Discount Description</string>
    <string name="discount_price">Discount Price</string>
    <string name="shopname">Organisation Name</string>
    <string name="location">Location</string>
    <string name="apply">Apply</string>
    <string name="client_email">Client Email</string>
    <string name="client_name">Client Name</string>
    <string name="status">Status</string>
    <string name="send_email">Send Email</string>
    <string name="callcandidate">Call Candidate</string>
    <string name="click_for_profile_image">Click For Profile Image</string>
    <string name="enter_special_key">Enter Special Key</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="organisation_business_startup">Organisation/Business/startup</string>
    <string name="click_top_right_corner_for_location">Click Top right corner for location</string>
    <string name="job_seeker_signup_from_here">Job Seeker? Signup from here</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="candidatename">Candidate Name</string>
    <string name="candidate_status">Candidate Status</string>
    <string name="pay">Pay</string>
    <string name="enter_amount1">Enter Amount</string>

</resources>