<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Login">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/logo1"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/account" />

        <EditText
            android:id="@+id/editTxtEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/logo1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:drawablePadding="3dp"
            android:background="@drawable/edit_text_style"
            android:drawableStart="@drawable/emailsvg"
            android:drawableLeft="@drawable/emailsvg"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTxtPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/editTxtEmail"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="22dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edit_text_style"
            android:drawableStart="@drawable/pass"
            android:drawableLeft="@drawable/pass"
            android:drawablePadding="3dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTxtPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_style"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/lin2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnlogin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtWarning"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/don_t_have_an_account_register_here"
                android:textColor="@color/lightBlue"
                android:textSize="17sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/frgitpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtWarning"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/forgot_password"
                android:textColor="@color/lightBlue"
                android:textSize="15sp"
                android:textStyle="bold|italic" />
        </LinearLayout>


    </RelativeLayout>

    <TextView
        android:id="@+id/txtLicence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="Developed By XerxesCodes54"
        android:textColor="@color/black"
        android:textStyle="italic" />

</RelativeLayout>