<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/topnav">

            <ImageView
                android:id="@+id/bk1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="14dp"
                android:src="@drawable/back" />

            <ImageView
                android:id="@+id/cordinates"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="14dp"
                android:src="@drawable/location" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/profile"
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:layout_below="@+id/rel1"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/account"
            tools:ignore="MissingClass"></ImageView>

        <EditText
            android:id="@+id/editname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/profile"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/edit_text_style"
            android:drawableStart="@drawable/profile"
            android:drawableLeft="@drawable/profile"
            android:hint="@string/enter_your_name"
            android:padding="3dp"></EditText>

        <EditText
            android:id="@+id/editemail"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_below="@+id/editname"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edit_text_style"
            android:drawableStart="@drawable/email"
            android:drawableLeft="@drawable/email"
            android:hint="@string/email"
            android:padding="3dp"></EditText>

        <EditText
            android:id="@+id/editphone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/editemail"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edit_text_style"
            android:drawableStart="@drawable/phone"
            android:drawableLeft="@drawable/phone"
            android:hint="@string/enter_your_phone_number"
            android:padding="3dp"></EditText>

        <EditText
            android:id="@+id/editaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editphone"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/edit_text_style"
            android:drawableStart="@drawable/address"
            android:drawableLeft="@drawable/phone"
            android:hint="@string/enter_your_full_address"
            android:lines="3"
            android:padding="3dp"></EditText>

        <Button
            android:id="@+id/btnsgnup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editaddress"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="29dp"
            android:background="@drawable/button_style"
            android:fontFamily="sans-serif-condensed"
            android:text="Register"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"></Button>

    </RelativeLayout>


</ScrollView>