<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JobSeeker.ViewJobPostings">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            tools:ignore="MissingConstraints" />

        <RelativeLayout
            android:id="@+id/vendordets"
            android:layout_width="407dp"
            android:layout_height="109dp"
            android:layout_below="@+id/toolBar"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/bg3"
            android:elevation="4dp">

            <TextView
                android:id="@+id/name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/vendor_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/email1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name1"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="9dp"
                android:hint="@string/vendor_email"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/openclse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_toRightOf="@+id/name1"
                android:background="@drawable/closebg"
                android:gravity="center"
                android:hint="@string/closed"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/phone2"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="150dp"
                    android:layout_marginLeft="150dp"
                    android:background="@color/white"
                    android:src="@drawable/call"></ImageView>

                <ImageView
                    android:id="@+id/find2"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="13dp"
                    android:layout_marginLeft="13dp"
                    android:background="@color/white"
                    android:src="@drawable/find"></ImageView>
            </LinearLayout>

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vendordets">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/admins"
                android:layout_width="408dp"
                android:layout_height="601dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vendordets"
                tools:ignore="NotSibling"
                tools:listitem="@layout/jobrow"></androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>


</ScrollView>